 
 o Rearanged man files.
 
 o Extend use of cex sub-args for x and y axes and lattice strips to plot.effpoly().
 
 o Avoid warnings when testing given.values == "default" or "equal".
 
 o Modified plot.effpoly() so that multiline plots don't show confidence limits by default, and so that confidence bars for a factor are staggered.
 
 o Added effectsHexsticker().
 
 o Small fixes and improvements.

Version 4.0-3

 o xlevels argument now works with predictorEffects.
 
 o Added cex sub-args for x and y axes (suggestion of Charles Leger) and for lattice strips.
 
 o modified .onAttach() so that trellis device doesn't open, suggestion of Kurt Hornik.

Version 4.0-2

 o Fixed bug with offsets in predictorEffects and a bug with variances in Effect.default.
 
 o Support partial-residual plots when the predictor on the horizontal axis is a factor.

 o For nonstandard models like lme, the weights argument was obtained from the call that created the object.  This argument was never used by effects, and caused an error with lme models that used weights. The weights argument is now ignored.
 
 o Fixed a bug due to new complete arg in vcov.lm() and vcov.glm().
 
 o lty was ignored for multiplot with factor on x-axis; now fixed (reported by Krisztian Magori).
 
 o Small fixes and improvements.

Version 4.0-1
 
 o Replaced the Effect.default method so it is easier to write new methods.
 
 o Added estimability check for linear models and glims.  Fixed bugs in plot with rank deficient models.
 
 o Repaired clm, clmm and clm2 methods that were broken.
 
 o Fixed a bug in predictorEffects with polym use to specify multivariate polynomials.
 
 o Replace confint and partial.residuals argument to Effect() with se and residuals; confint and partial.residuals now legacy arguments.
 
 o Small fixes/improvements.

Version 4.0-0

 o This is a major update of the effects package.

 o Moved data sets to the carData package.
 
 o Introduced predictor effects.
 